--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "/mj/qys/",
   "browserslist": {
     "production": [
       ">0.2%",
