--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.7",
     "@types/react-modal": "^3.10.5",
     "@types/react-redux": "^7.1.7",
+    "js-sha512": "^0.8.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
